# ecli

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.sh  cargo.ecli  install.sh  test.yml
.ci/: azure-pipelines.yml  build.sh
.github/workflows/: release.yml
assets/: install.sh
examples/: kitchen_sink.ecli
src/: args.rs  error.rs  macros.rs  main.rs
src/commands/: mod.rs  shebang.yml
src/config/: actions.rs  menus.rs  misc.rs  mod.rs  styles.rs
src/screen/: exec.rs  mod.rs  renderer.rs
src/screen/menus/: choice.rs  mod.rs  prompt.rs
src/templates/: filters.rs  functions.rs  mod.rs  ser.rs
