[package]
name = "ecli"
description = "Dynamic interactive CLI menus"
repository = "https://github.com/proctorlabs/ecli"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["cli", "menu"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33"
handlebars = "2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
