[package]
name = "ecli"
description = "Dynamic interactive CLI menus"
repository = "https://github.com/proctorlabs/ecli"
version = "0.2.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["cli", "menu"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"
readme = "README.md"
exclude = [".github/**"]

[package.metadata.deb]
maintainer = "Phil Proctor <philliptproctor@gmail.com>"
copyright = "2019, ecli development team"
license-file = ["LICENSE", "5"]
extended-description = """\
Dynamic interactive CLI menus"""
depends = "$auto"
section = "utility"
priority = "optional"

[dependencies]
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33"
unstructured = "0.3"
templar = "0.1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "ecli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

